corrected page titles, many said 'profile'. Corrected dropdown menu background, now shows image asset talkbox-gray. Changed <br /> to <br> in livesearch. Styled the error page. Moved js for search on welcome page from app.blade to the welcome page, hopefully a fix. Updated css for table-hover list items for readability

--- a/bookswap/public/css/styles.css
+++ b/bookswap/public/css/styles.css
@@ -57,11 +57,11 @@ nav .icon-bar {
     padding-left: 50px;
     padding-right: 0px;
 }
-/*
+/*--------------------
 Used for 'open' feature for links and dropdowns on browsers.
 Area remains 'highlighted' with this css.
 Overide, but make text 'highlight' to keep the consistent idea.
-*/
+--------------------*/
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
     background-color: #222;
     color: #AAFF00;
@@ -146,22 +146,9 @@ label{
 div {
     display: block;
 }
-.panel {
-    font-size: 1.25em;
-    line-height: 1.5;
-    background-color: inherit;
-}
-.panel-heading {
-    text-align: center;
-}
-.panel a {
-    color: #77BB00;
-    text-decoration: none;
-}
-.panel a:hover {
-    color: #AAFF00;
-    text-decoration: none;
-}
+/* --------------------------------
+Buttons
+-------------------------------- */
 .btn {
     color: #fff;
     font-size: inherit;
@@ -180,6 +167,9 @@ div {
 .btn-center {
     text-align: center;
 }
+/* --------------------------------
+Form components
+-------------------------------- */
 .radio {
     margin-right: 25px;
 }
@@ -193,6 +183,9 @@ div {
     outline: 0;
     box-shadow: none;
 }
+/*--------------------
+Input areas
+--------------------*/
 input[type=text], input[type="email"], input[type="password"], input[type="number"] {
     color: #cccccc;
     font-size: 1.25em;
@@ -217,12 +210,12 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
     border-bottom: 3px solid #ccc;
     transition: all 300ms ease-in-out;
 }
-/*
+/*--------------------
 Used for auto fill on browsers.
 Selected entry remains 'highlighted' with this css.
 Overide, but make text 'highlight' to keep the consistent idea.
 Doesn't seem to work, maybe since i'm logged into Chrome...
-*/
+--------------------*/
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     background-color: #222!important;
     background-image: none!important;
@@ -230,7 +223,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 }
 input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #77BB00;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -238,12 +231,48 @@ input[type=submit] {
     cursor: pointer;
 }
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #77BB00;
 }
 input[type="checkbox"] [type="radio"]{
     margin-top: .4em;
     transform:scale(1.3, 1.3);
 }
+/* --------------------------------
+Panel components
+Bootstrap panel (min-width) update
+-------------------------------- */
+.panel {
+    font-size: 1.25em;
+    line-height: 1.5;
+    background-color: inherit;
+}
+.panel-heading {
+    text-align: center;
+}
+.panel a {
+    color: #77BB00;
+    text-decoration: none;
+}
+.panel a:hover {
+    color: #AAFF00;
+    text-decoration: none;
+}
+/* About page usage */
+.panel-body .col-sm-12 {
+    float: left;
+    min-width: 400px;
+}
+/* --------------------------------
+Table components
+Bootstrap table-hover update
+-------------------------------- */
+.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
+  background-color: #666;
+  color:#AAFF00;
+}
+/* --------------------------------
+background images - from image assets
+-------------------------------- */
 .bgimg-talkbox {
     padding: 30px 20px 20px 20px;
 }
@@ -279,10 +308,9 @@ input[type="checkbox"] [type="radio"]{
 .icon-blankbook {
     width: 100px;
 }
-
-/*--------------------
+/* --------------------------------
 About stuff...
---------------------*/
+-------------------------------- */
 .about-bookswap {
     text-align: center;
     padding-bottom: 15px;
@@ -325,14 +353,9 @@ About stuff...
     filter: brightness(1.1);
     border: 4px solid #AAFF00;
 }
-.panel-body .col-sm-12 {
-    float: left;
-    min-width: 550px;
-}
-
-/*--------------------
+/* --------------------------------
 FAQ stuff...
---------------------*/
+-------------------------------- */
 section ul li {
     list-style: none!important;
 }
@@ -407,8 +430,6 @@ section a:hover {
     -o-transform: rotate(90deg);
     transform: rotate(90deg);
 }
-
-
 .categories li:last-child a {
     border-bottom: none;
 }
